# IGenBench

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.gemini/: config.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
igenbench/: defaults.py  vis_item.py
igenbench/cli/: batch_cli.py  eval_cli.py  gen_cli.py  main.py  score_cli.py
igenbench/engine/: base_engine.py  eval_engine.py  gen_engine.py
igenbench/utils/: error_handler.py  io.py  model_resolver.py  path_resolver.py  state_manager.py  svg_renderer.py
igenbench/utils/llm/: caller_registry.py  client.py  llm_caller.py
igenbench/workflow/: eval_workflow.py  gen_workflow.py  workflow_config.py
prompts/: eval_judge_factual_qa.py  gen_text2image.py
tests/: test_caller_registry.py  test_cli_defaults.py  test_cli_score.py  test_eval_engine.py  test_io.py  test_vis_item.py
tests/fixtures/: sample_item.json
