[project]
name = "igenbench"
version = "0.1.0"
description = "IGenBench - Benchmark for evaluating the reliability of text-to-infographic generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MisterBrookT", email = "yinghaotang2001@gmail.com"},
]
keywords = [
    "benchmark",
    "infographic",
    "text-to-image",
    "evaluation",
    "multimodal",
    "LLM",
    "generative-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-genai>=1.49.0",
    "pillow>=12.0.0",
    "typer>=0.20.0",
    "openai>=2.7.1",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/MisterBrookT/IGenBench"
Repository = "https://github.com/MisterBrookT/IGenBench"
"Bug Tracker" = "https://github.com/MisterBrookT/IGenBench/issues"

[project.optional-dependencies]
replicate = ["replicate>=0.34.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["igenbench*", "prompts*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.6",
]

[project.scripts]
igenbench = "igenbench.cli.main:main"

